--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'com.android.application'
+//    id 'org.jetbrains.kotlin.android'
+    id 'com.chaquo.python'  // Must come after com.android.application
 }
 
 
@@ -16,20 +18,6 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    ndkVersion '21.0.6113669'
-    defaultConfig {
 
         externalNativeBuild {
             cmake {
@@ -43,7 +31,26 @@ android {
             abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
         }
         signingConfig signingConfigs.debug
+
+        python {
+            version "3.8"
+        }
     }
+
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    ndkVersion '21.0.6113669'
+//    kotlinOptions {
+//        jvmTarget = '1.8'
+//    }
 }
 
 dependencies {
@@ -69,6 +76,10 @@ dependencies {
 
     implementation 'org.python:jython-standalone:2.7.2'
 //    implementation 'com.chaquo.python:android:9.1.1'
+////    implementation 'com.chaquo.python:gradle:9.1.1'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
+//    implementation 'androidx.core:core-ktx:1.9.0'
 
 
 }
